<resources>
    <string name="app_name">PlantApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plant_part">Plant Part</string>
    <string name="digite_aqui_seu_email">Digite aqui seu email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="warning">warning</string>
    <string name="clique_para_abrir_a_imagem">clique para abrir a imagem</string>
    <string name="bem_vindo">Bem vindo</string>
    <string name="cadastro_exclyuir">\@string/cadastrar</string>
    <string name="cadastro">Cadastrar</string>
    <string name="voltar">voltar</string>


</resources>