<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/botaoCadastrar"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/cadastro"
        android:textColor="@color/teal_200"
        app:iconTint="#87EC13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="58dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:text="@string/plant_part"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="287dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:hint="@string/digite_aqui_seu_email"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243"
        android:autofillHints="@string/fab_transformation_scrim_behavior" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:hint="@string/senha"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352"
        android:autofillHints=""
        android:inputType="textPassword" />


    <Button
        android:id="@+id/botaoLogin"
        android:layout_width="236dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_200"
        android:text="@string/login"
        app:iconTint="#87EC13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="280dp"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        android:layout_marginTop="410dp"
        android:gravity="center"
        android:contentDescription="@string/warning"
        android:src="@drawable/planta"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

